Crash when deleting recently orphaned collection #57816

Closed
opened 2018-11-13 20:55:57 +01:00 by Dalai Felinto · 5 comments

Blender Version
Broken: c39d5a6c88 (blender2.8 HEAD)

Short description of error
Crash when deleting recently orphaned collection.

Exact steps for others to reproduce the error

  • Create a collection (or use the initial collection as a start point)
  • Create a sub-collection
  • Delete the parent collection
  • Delete the orphan collection (the former child collection).

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenlib/intern/listbase.c:686 in BLI_findptr
Full backtrace: P822

**Blender Version** Broken: c39d5a6c88dc (blender2.8 HEAD) **Short description of error** Crash when deleting recently orphaned collection. **Exact steps for others to reproduce the error** * Create a collection (or use the initial collection as a start point) * Create a sub-collection * Delete the parent collection * Delete the orphan collection (the former child collection). SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenlib/intern/listbase.c:686 in BLI_findptr Full backtrace: [P822](https://archive.blender.org/developer/P822.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2018-11-13 20:58:52 +01:00
Author
Owner

I may look at it, but assigning to Brecht in the mean while.

I may look at it, but assigning to Brecht in the mean while.

This issue was referenced by 36184f7392

This issue was referenced by 36184f739264387a932c21424964d01c33d793b0
Author
Owner

See proposed fix on D4099.

See proposed fix on [D4099](https://archive.blender.org/developer/D4099).
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57816
No description provided.