Fix T57816: Crash when deleting recently orphaned collection

We were never removing the parent collection from a collection upon removal
of the parent.

Reviewers: mont29

Differential Revision: https://developer.blender.org/D4099